--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: social_auth_btn_kit
-description: A new Flutter package project.
+description: Quick and easy way to implement social login buttons in your app.
 version: 0.0.1
 homepage:
 
@@ -15,6 +15,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  commitlint_cli: ^0.7.1
+  husky: ^0.1.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
