--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dev_dependencies:
   commitlint_cli: ^0.7.1
   very_good_analysis: ^5.1.0
   lint_staged: ^0.4.2
+  husky: ^0.1.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
