--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: social_auth_btn_kit
 description: Quick and easy way to implement social login buttons in your app.
 version: 0.0.1
-homepage:
+repository: https://github.com/botraunak/social_auth_btn_kit
 
 environment:
   sdk: '>=3.1.4 <4.0.0'
